--- a/ci.cfg
+++ b/ci.cfg
@@ -1,38 +1,38 @@
 // Disable checking if firefox is default browser
-lockPref('browser.shell.checkDefaultBrowser', false);
+// lockPref('browser.shell.checkDefaultBrowser', false);
 
 // Disable restoring session
-lockPref('browser.sessionstore.resume_from_crash', false);
+// lockPref('browser.sessionstore.resume_from_crash', false);
 
 // Disable extension signature check
 lockPref('xpinstall.signatures.required', false);
 
 // Allow extensions to be installed without user prompt
-pref("extensions.autoDisableScopes", 0);
-pref("extensions.enabledScopes", 15);
+// pref("extensions.autoDisableScopes", 0);
+// pref("extensions.enabledScopes", 15);
 
 // Disable updater
-lockPref("app.update.enabled", false);
+// lockPref("app.update.enabled", false);
 // make absolutely sure it is really off
-lockPref("app.update.auto", false);
-lockPref("app.update.mode", 0);
-lockPref("app.update.service.enabled", false);
+// lockPref("app.update.auto", false);
+// lockPref("app.update.mode", 0);
+// lockPref("app.update.service.enabled", false);
 
 // Prevent closing dialogs
-lockPref("browser.showQuitWarning", false);
-lockPref("browser.warnOnQuit", false);
-lockPref("browser.tabs.warnOnClose", false);
-lockPref("browser.tabs.warnOnCloseOtherTabs", false);
+// lockPref("browser.showQuitWarning", false);
+// lockPref("browser.warnOnQuit", false);
+// lockPref("browser.tabs.warnOnClose", false);
+// lockPref("browser.tabs.warnOnCloseOtherTabs", false);
 
 // Disable Add-ons compatibility checking
-clearPref("extensions.lastAppVersion");
+// clearPref("extensions.lastAppVersion");
 
 // Don't show 'know your rights' on first run
-pref("browser.rights.3.shown", true);
+// pref("browser.rights.3.shown", true);
 
 // Disable plugin checking
-lockPref("plugins.hide_infobar_for_outdated_plugin", true);
-clearPref("plugins.update.url");
+// lockPref("plugins.hide_infobar_for_outdated_plugin", true);
+// clearPref("plugins.update.url");
 
 // Disable health reporter
 lockPref("datareporting.healthreport.service.enabled", false);
@@ -41,11 +41,11 @@ lockPref("datareporting.healthreport.service.enabled", false);
 lockPref("datareporting.policy.dataSubmissionEnabled", false);
 
 // Disable crash reporter
-lockPref("toolkit.crashreporter.enabled", false);
-Components.classes["@mozilla.org/toolkit/crash-reporter;1"].getService(Components.interfaces.nsICrashReporter).submitReports = false;
+// lockPref("toolkit.crashreporter.enabled", false);
+// Components.classes["@mozilla.org/toolkit/crash-reporter;1"].getService(Components.interfaces.nsICrashReporter).submitReports = false;
 
 // Disable download popup after automatic (script-triggered) downloads
-lockPref("browser.download.panel.shown", true);
+// lockPref("browser.download.panel.shown", true);
 
 // Browser Console command line
-pref("devtools.chrome.enabled", true);
+// pref("devtools.chrome.enabled", true);
